// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createColors > should create colors if has input 1`] = `
[
  OptionColor {
    "props": {
      "name": "blue",
      "shade": 5,
    },
  },
  OptionColor {
    "props": {
      "name": "red",
      "shade": 5,
    },
  },
]
`;

exports[`createColors > should create colors if no input 1`] = `
[
  OptionColor {
    "props": {
      "name": "indigo",
      "shade": 5,
    },
  },
  OptionColor {
    "props": {
      "name": "blue",
      "shade": 5,
    },
  },
]
`;
